agregue libreria de alerts

--- a/pages/requisitos.html
+++ b/pages/requisitos.html
@@ -65,7 +65,7 @@
               </div>             
         </section>
     <div class="content hidden">                                           
-      <h2>Bienvenido a la página</h2>                                           
+      <h2>¡Bienvenido!</h2>                                           
       <p>En este sector tendra una serie de items los cuales debe cumplir para obtener el credito</p>
       <ol>
         <li>Tener una cuenta de banco</li>
@@ -92,5 +92,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../js/main-requisitos.js"></script>
+    
   </body>
 </html>
